Rearranged the text one last time!

--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
 
   Majoring in Computer Game Science, looking to minor in Business Management.<br><br>
 
-  
+  Inquisitive scholar by nature, producer and developer by trade, humble listener and firm leader through experience. 
 
-  <br>
+
   </p>
 
   </div>
@@ -74,9 +74,12 @@
 <div class="col-lg-4">
 <div class="greyLay">
   <p> 
-  I'm currently employed as a Campus Ambassador for Readyforce for my school, and a research assistant at the California Plug Load Research Center.  <br><br>
+  I'm currently employed as a Campus Ambassador for Readyforce at UCI, and a research assistant at the California Plug Load Research Center.  <br><br>
 
-  I was one of the organizers the first HackUCI; which drew over 300+ attendees as the first student-organized hackathon in Orange County, and lasted for 36 hours.
+  I am one of the organizers the first HackUCI; which drew over 300+ attendees as the first student-organized hackathon in Orange County, and lasted for 36 hours. <br> <br>
+
+At UCI, I'm the Vice President of the Video Game Design Club, and Webmaster of the Taiwanese American Organization.
+
   
    <br>
 
@@ -87,10 +90,10 @@
 <div class="col-lg-4">
 <div class="greyLay">
   <p> 
-At UCI, I'm the Vice President of the Video Game Design Club, and Webmaster of the Taiwanese American Organization @ UCI.
- <br> <br>
 
   In my spare time, I enjoy League of Legends, Hearthstone, piano improvisation, and iced coffee. <br><br>
+
+  I was born in Atlanta, Georgia; and I'm Taiwanese by birth. I currently reside in Irvine, California. <br><br>
 
   Find me on... <br><br>
 
