--- a/index.html
+++ b/index.html
@@ -61,10 +61,9 @@
 
   I attend the <i>University of California, Irvine.</i> <br><br>
 
-  Majoring in Computer Game Science, looking to minor in Business Management.<br><br>
+  I'm majoring in Computer Game Science, and looking to minor in management.<br><br>
 
-  Inquisitive scholar by nature, producer and developer by trade, humble listener and firm leader through experience. 
-
+  I am an inquisitive scholar and humble listener by nature, developer by trade, firm leader through experience. 
 
   </p>
 
@@ -74,11 +73,11 @@
 <div class="col-lg-4">
 <div class="greyLay">
   <p> 
-  I'm currently employed as a Campus Ambassador for Readyforce at UCI, and a research assistant at the California Plug Load Research Center.  <br><br>
+  I'm employed as a Campus Ambassador for Readyforce at UCI, and as a research assistant at the California Plug Load Research Center.  <br><br>
 
-  I am one of the organizers the first HackUCI; which drew over 300+ attendees as the first student-organized hackathon in Orange County, and lasted for 36 hours. <br> <br>
+  I'm one of the organizers for HackUCI; the first student-organized hackathon drawing 300+ attendees in Orange County. <br> <br>
 
-At UCI, I'm the Vice President of the Video Game Design Club, and Webmaster of the Taiwanese American Organization.
+  At UCI, I'm the VP of the Video Game Design Club, and the Webmaster of the Taiwanese American Organization.
 
   
    <br>
@@ -97,9 +96,9 @@ At UCI, I'm the Vice President of the Video Game Design Club, and Webmaster of t
 
   Find me on... <br><br>
 
-  <a href ="www.readyforce.com/Jchiu5">Readyforce</a> <br>
-  <a href ="www.linkedin.com/in/foreza/">Linkedin</a> <br>
-  <a href ="www.github.com/foreza">Github</a>
+  <a href ="http://www.readyforce.com/Jchiu5">Readyforce</a> <br>
+  <a href ="http://www.linkedin.com/in/foreza/">Linkedin</a> <br>
+  <a href ="http://www.github.com/foreza">Github</a>
   
   </p>
 
