Added the .pod subclass.

--- a/index.html
+++ b/index.html
@@ -96,10 +96,12 @@
 
   Find me on... <br><br>
 
-  <a href ="http://www.readyforce.com/Jchiu5">Readyforce</a> <br>
-  <a href ="http://www.linkedin.com/in/foreza/">Linkedin</a> <br>
-  <a href ="http://www.github.com/foreza">Github</a>
-  
+
+  <ul>
+  <li><a href ="http://www.readyforce.com/Jchiu5">Readyforce</a> 
+  <li><a href ="http://www.linkedin.com/in/foreza/">Linkedin</a> 
+  <li><a href ="http://www.github.com/foreza">Github</a>
+  </li>
   </p>
 
   </div>
@@ -115,14 +117,34 @@
 <div class="row constrain80">
 <div class="col-lg-6">
 <div class="greyLay">
-  <p>
+  <p id="pod">
   
 
+I make animations and develop an interactive application for the Children's Hospital, Orange County (CHOC). This application is developed using Unity2D, and I use the iClone3D and 3dXchange pipline to create animations, while integrating content with the rest of the application. A prototype of the project can be found here. [LINK WILL BE ADDED SHORTLY]
 
-I represent Readyforce at job / career fairs. Readyforce is very similar to LinkedIn, and better tailored to students in Engineering and Computer Science; I focus on increasing the number of students using this service!
+   </p>
 
-I make animations and develop an interactive application for the Children's Hospital, Orange County (CHOC). This application is developed using Unity2D, and I use the iClone3D and 3dXchange pipline to create animations, while integrating content with the rest of the application. 
+  </div>
+  </div>
 
+<div class="col-lg-6">
+<div class="greyLay">
+  <p id="pod">
+ 
+I represent Readyforce at job / career fairs. Readyforce is very similar to LinkedIn, and better tailored to students in Engineering and Computer Science; I focus on increasing the number of students using this service! 
+
+
+  </p>
+
+  </div>
+</div>
+</div>
+
+<div class="row constrain80">
+<div class="col-lg-6">
+<div class="greyLay">
+  <p id="pod">
+  
 
 which is an organization that helps aspiring game developers network with potential employers and opportunities, and make games.
 
@@ -133,11 +155,9 @@ which is an organization that helps aspiring game developers network with potent
 
 <div class="col-lg-6">
 <div class="greyLay">
-  <p>
-    <ul>
-
-    
-  </ul>
+  <p id="pod">
+ 
+stuff about being a webmaster...
 
 
   </p>
