--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
 
 
   <ul>
-  <li><a href ="http://www.readyforce.com/Jchiu5">Readyforce</a> 
-  <li><a href ="http://www.linkedin.com/in/foreza/">Linkedin</a> 
-  <li><a href ="http://www.github.com/foreza">Github</a>
-  </li>
+  <li><a href ="http://www.readyforce.com/Jchiu5">Readyforce</a> </li>
+  <li><a href ="http://www.linkedin.com/in/foreza/">Linkedin</a> </li>
+  <li><a href ="http://www.github.com/foreza">Github</a> </li>
+  </ul>
   </p>
 
   </div>
@@ -117,7 +117,7 @@
 <div class="row constrain80">
 <div class="col-lg-6">
 <div class="greyLay">
-  <p id="pod">
+  <p class="pod">
   
 
 I make animations and develop an interactive application for the Children's Hospital, Orange County (CHOC). This application is developed using Unity2D, and I use the iClone3D and 3dXchange pipline to create animations, while integrating content with the rest of the application. A prototype of the project can be found here. [LINK WILL BE ADDED SHORTLY]
@@ -138,12 +138,12 @@ I represent Readyforce at job / career fairs. Readyforce is very similar to Link
 
   </div>
 </div>
-</div>
 
-<div class="row constrain80">
+<div class="bogus"></div>
+
 <div class="col-lg-6">
 <div class="greyLay">
-  <p id="pod">
+  <p class="pod">
   
 
 which is an organization that helps aspiring game developers network with potential employers and opportunities, and make games.
