Pod classes are a pain.

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ I make animations and develop an interactive application for the Children's Hosp
 
 <div class="col-lg-6">
 <div class="greyLay">
-  <p id="pod">
+  <p class="pod">
  
 I represent Readyforce at job / career fairs. Readyforce is very similar to LinkedIn, and better tailored to students in Engineering and Computer Science; I focus on increasing the number of students using this service! 
 
@@ -155,7 +155,7 @@ which is an organization that helps aspiring game developers network with potent
 
 <div class="col-lg-6">
 <div class="greyLay">
-  <p id="pod">
+  <p class="pod">
  
 stuff about being a webmaster...
 
