--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 <div class="col-lg-4">
 <div class="greyLay">
-  <p oversize> Hi there! I'm Jason Chiu. <br><br>
+  <p class="oversize"> Hi there! I'm Jason Chiu. <br><br>
 
 
   I attend the <i>University of California, Irvine.</i> <br><br>
@@ -72,7 +72,7 @@
 
 <div class="col-lg-4">
 <div class="greyLay">
-  <p oversize> 
+  <p class="oversize"> 
   I'm employed as a Campus Ambassador for Readyforce at UCI, and as a research assistant at the California Plug Load Research Center.  <br><br>
 
   I'm one of the organizers for HackUCI; the first student-organized hackathon drawing 300+ attendees in Orange County. <br> <br>
@@ -88,7 +88,7 @@
   </div>
 <div class="col-lg-4">
 <div class="greyLay">
-  <p oversize> 
+  <p class="oversize"> 
 
   In my spare time, I enjoy League of Legends, Hearthstone, piano improvisation, and iced coffee. <br><br>
 
