--- a/index.html
+++ b/index.html
@@ -96,12 +96,10 @@
 
   Find me on... <br><br>
 
+  <a href ="http://www.readyforce.com/Jchiu5">Readyforce</a> <br>
+  <a href ="http://www.linkedin.com/in/foreza/">Linkedin</a> <br>
+  <a href ="http://www.github.com/foreza">Github</a> 
 
-  <ul>
-  <li><a href ="http://www.readyforce.com/Jchiu5">Readyforce</a> </li>
-  <li><a href ="http://www.linkedin.com/in/foreza/">Linkedin</a> </li>
-  <li><a href ="http://www.github.com/foreza">Github</a> </li>
-  </ul>
   </p>
 
   </div>
