--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
                 <li><a href="blog.html">Blog</a></li>
             </ul>
             <h1>Jason Chiu</h1>
-                      <h2>Producer. Developer.</h2>
-                      <h3>Summoner. Questing Adventurer.</h3>
+                      <h3>Producer. Developer. Summoner. Questing Adventurer.</h3>
 </div>
 </div>
 </nav>
@@ -50,7 +49,7 @@
 <div id="about">
 
 <div class="bogus"></div>
-      <h2>About Me</h2>
+      <h2>A little about me... </h2>
 
 <div class="row constrain80">
 
@@ -61,9 +60,7 @@
 
   I attend the <i>University of California, Irvine.</i> <br><br>
 
-  I'm majoring in Computer Game Science, and looking to minor in management.<br><br>
-
-  I am an inquisitive scholar and humble listener by nature, developer by trade, firm leader through experience. 
+  I'm majoring in Computer Game Science, specializing in software development.<br><br>
 
   </p>
 
@@ -73,11 +70,13 @@
 <div class="col-lg-4">
 <div class="greyLay">
   <p class="oversize"> 
-  I'm employed as a Campus Ambassador for Readyforce at UCI, and as a research assistant at the California Plug Load Research Center.  <br><br>
 
-  I'm one of the organizers for HackUCI; the first student-organized hackathon drawing 300+ attendees in Orange County. <br> <br>
+  I am an inquisitive scholar and humble listener by nature, developer by trade, firm leader through experience. <br><br>
 
-  At UCI, I'm the VP of the Video Game Design Club, and the Webmaster of the Taiwanese American Organization.
+
+  I'm currently employed as a Campus Ambassador for Readyforce at UCI, and as a research assistant at the California Plug Load Research Center.  <br><br>
+
+
 
   
    <br>
@@ -93,13 +92,6 @@
   In my spare time, I enjoy League of Legends, Hearthstone, piano improvisation, and iced coffee. <br><br>
 
   I was born in Atlanta, Georgia; and I'm Taiwanese by birth. I currently reside in Irvine, California. <br><br>
-
-  Find me on... <br><br>
-
-  <a href ="http://www.readyforce.com/Jchiu5">Readyforce</a> <br>
-  <a href ="http://www.linkedin.com/in/foreza/">Linkedin</a> <br>
-  <a href ="http://www.github.com/foreza">Github</a> 
-
   </p>
 
   </div>
@@ -116,9 +108,9 @@
 <div class="col-lg-6">
 <div class="greyLay">
   <p class="pod">
-  
 
-I make animations and develop an interactive application for the Children's Hospital, Orange County (CHOC). This application is developed using Unity2D, and I use the iClone3D and 3dXchange pipline to create animations, while integrating content with the rest of the application. A prototype of the project can be found here. [LINK WILL BE ADDED SHORTLY]
+  I'm one of the organizers for HackUCI; the first student-organized hackathon drawing 300+ attendees in Orange County. 
+
 
    </p>
 
@@ -128,21 +120,38 @@ I make animations and develop an interactive application for the Children's Hosp
 <div class="col-lg-6">
 <div class="greyLay">
   <p class="pod">
+
+    I'm the VP of the Video Game Design Club @UCI, and the Webmaster of the Taiwanese American Organization.
  
-I represent Readyforce at job / career fairs. Readyforce is very similar to LinkedIn, and better tailored to students in Engineering and Computer Science; I focus on increasing the number of students using this service! 
 
 
   </p>
 
   </div>
 </div>
+</div>
 
+<br>
+
+<div class="row constrain80">
 <div class="col-lg-6">
 <div class="greyLay">
   <p class="pod">
   
 
 which is an organization that helps aspiring game developers network with potential employers and opportunities, and make games.
+
+I make animations and develop an interactive application for the Children's Hospital, Orange County (CHOC). This application is developed using Unity2D, and I use the iClone3D and 3dXchange pipline to create animations, while integrating content with the rest of the application. A prototype of the project can be found here. [LINK WILL BE ADDED SHORTLY]
+
+I represent Readyforce at job / career fairs. Readyforce is very similar to LinkedIn, and better tailored to students in Engineering and Computer Science; I focus on increasing the number of students using this service! 
+
+
+Find me on... <br><br>
+
+  <a href ="http://www.readyforce.com/Jchiu5">Readyforce</a> <br>
+  <a href ="http://www.linkedin.com/in/foreza/">Linkedin</a> <br>
+  <a href ="http://www.github.com/foreza">Github</a> 
+
 
    </p>
 
