Edited CSS to continue theme.

--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
 
 <div class="col-lg-4">
 <div class="greyLay">
-  <p class="oversize"> Hi there! I'm Jason Chiu. <br><br>
+  <p class="oversize">  <fontastic>I'm Jason Chiu.</fontastic>
 
 
-  I attend the <i>University of California, Irvine.</i> <br><br>
+  I attend the <i>University of California, Irvine.</i> <br>
 
-  I'm majoring in Computer Game Science, specializing in software development.<br><br>
+  I major in Computer Game Science, specializing in software development.<br>
 
   </p>
 
@@ -71,10 +71,9 @@
 <div class="greyLay">
   <p class="oversize"> 
 
-  I am an inquisitive scholar and humble listener by nature, developer by trade, firm leader through experience. <br><br>
+  I am an inquisitive scholar by nature, humble listener by practice, and a developer by trade. <br>
 
-
-  I'm currently employed as a Campus Ambassador for Readyforce at UCI, and as a research assistant at the California Plug Load Research Center.  <br><br>
+  I'm currently employed as a Campus Ambassador for Readyforce at UCI, and as a research assistant at the California Plug Load Research Center. 
 
 
 
@@ -91,7 +90,7 @@
 
   In my spare time, I enjoy League of Legends, Hearthstone, piano improvisation, and iced coffee. <br><br>
 
-  I was born in Atlanta, Georgia; and I'm Taiwanese by birth. I currently reside in Irvine, California. <br><br>
+  I was born in Atlanta; and taiwanese by birth. I currently reside in Irvine, California. <br><br>
   </p>
 
   </div>
