Changed bogus to be a bit larger.

--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
 
 <div class="col-lg-4">
 <div class="greyLay">
-  <p class="oversize">  <fontastic>I'm Jason Chiu.</fontastic>
+  <p class="oversize">  <fontastic>I'm Jason Chiu.</fontastic> <br>
 
 
-  I attend the <i>University of California, Irvine.</i> <br>
+  &nbsp;&nbsp;I attend the <i>University of California, Irvine.</i> <br>
 
-  I major in Computer Game Science, specializing in software development.<br>
+  &nbsp;&nbsp;I major in Computer Game Science, specializing in software development.<br>
 
   </p>
 
@@ -71,12 +71,9 @@
 <div class="greyLay">
   <p class="oversize"> 
 
-  I am an inquisitive scholar by nature, humble listener by practice, and a developer by trade. <br>
+  &nbsp;&nbsp;I am an inquisitive scholar by nature and a humble listener by practice. <br>
 
-  I'm currently employed as a Campus Ambassador for Readyforce at UCI, and as a research assistant at the California Plug Load Research Center. 
-
-
-
+  &nbsp;&nbsp;I'm currently employed as a Campus Ambassador for Readyforce at UCI, and as a research assistant at the California Plug Load Research Center. 
   
    <br>
 
@@ -88,9 +85,9 @@
 <div class="greyLay">
   <p class="oversize"> 
 
-  In my spare time, I enjoy League of Legends, Hearthstone, piano improvisation, and iced coffee. <br><br>
+  &nbsp;&nbsp;I enjoy League of Legends, Hearthstone, piano improvisation, and iced coffee.<br>
 
-  I was born in Atlanta; and taiwanese by birth. I currently reside in Irvine, California. <br><br>
+  &nbsp;&nbsp;I was born in Atlanta; and Taiwanese by birth. I currently reside in Irvine, California. <br>
   </p>
 
   </div>
