Changed it from 4-4-4 to 6-6

--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
                 <li><a href="blog.html">Blog</a></li>
             </ul>
             <h1>Jason Chiu</h1>
-                      <h3>Producer. Developer. Summoner. Questing Adventurer.</h3>
 </div>
 </div>
 </nav>
@@ -52,46 +51,33 @@
       <h2>A little about me... </h2>
 
 <div class="row constrain80">
-
-<div class="col-lg-4">
+<div class="col-lg-6">
 <div class="greyLay">
   <p class="oversize">  <fontastic>I'm Jason Chiu.</fontastic> <br>
-
-
-  &nbsp;&nbsp;I attend the <i>University of California, Irvine.</i> <br>
-
-  &nbsp;&nbsp;I major in Computer Game Science, specializing in software development.<br>
-
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I attend the <i>University of California, Irvine.</i> <br><br>
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I major in Computer Game Science, specializing in software development.<br><br>
+   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I'm an inquisitive scholar by nature and a humble listener by practice.<br>
   </p>
 
   </div>
   </div>
 
-<div class="col-lg-4">
+<div class="col-lg-6">
 <div class="greyLay">
   <p class="oversize"> 
 
-  &nbsp;&nbsp;I am an inquisitive scholar by nature and a humble listener by practice. <br>
+ 
 
-  &nbsp;&nbsp;I'm currently employed as a Campus Ambassador for Readyforce at UCI, and as a research assistant at the California Plug Load Research Center. 
-  
-   <br>
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I'm currently employed as a Campus Ambassador for Readyforce at UCI, and as a research assistant at the California Plug Load Research Center. <br><br>
+
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I enjoy League of Legends, Hearthstone, piano improv, and iced coffee.<br>
+
 
   </p>
 
   </div>
   </div>
-<div class="col-lg-4">
-<div class="greyLay">
-  <p class="oversize"> 
 
-  &nbsp;&nbsp;I enjoy League of Legends, Hearthstone, piano improvisation, and iced coffee.<br>
-
-  &nbsp;&nbsp;I was born in Atlanta; and Taiwanese by birth. I currently reside in Irvine, California. <br>
-  </p>
-
-  </div>
-</div>
 </div>
 
 
