Added a lot of new content.

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
 <div id="experience">
 <div class="bogus"></div>
-<h2>Experience</h2>
+<h2>Experience/Skills </h2>
 
 
 <div class="row constrain80">
@@ -91,7 +91,7 @@
 <div class="greyLay">
   <p class="pod">
 
-  I'm one of the organizers for HackUCI; the first student-organized hackathon drawing 300+ attendees in Orange County. 
+  I'm an organizer for HackUCI; the first student-organized hackathon drawing 300+ attendees in Orange County. <a href="www.hackuci.com">Learn more about HackUCI.</a>
 
 
    </p>
@@ -103,7 +103,10 @@
 <div class="greyLay">
   <p class="pod">
 
-    I'm the VP of the Video Game Design Club @UCI, and the Webmaster of the Taiwanese American Organization.
+    I'm the Vice President of the Video Game Design Club @UCI, where I mentor promising students who wish to learn how to make games. <a href="http://vgdc-uci.com/">Check out VGDC@UCI here.</a> 
+
+
+    
  
 
 
@@ -114,6 +117,29 @@
 </div>
 
 <br>
+
+<div class="row constrain80">
+<div class="col-lg-6">
+<div class="greyLay">
+  <p class="pod">
+  I'm the Webmaster of the Taiwanese American Organization, which promotes Taiwanese American Culture through social events. <a href="taouci.com">Check out the website I built here.</a>
+   </p>
+
+  </div>
+  </div>
+
+<div class="col-lg-6">
+<div class="greyLay">
+  <p class="pod">
+ 
+I'm a research assistant at Calplug, where I make and integrate 3D animations for an application for children at the Children's Hospital Orange County. <a href="#">Check out some of my work here.</a>
+
+  </p>
+
+  </div>
+</div>
+</div>
+
 
 <div class="row constrain80">
 <div class="col-lg-6">
