Added a break and center for the links in the exp

--- a/index.html
+++ b/index.html
@@ -53,45 +53,32 @@
 <div class="row constrain80">
 <div class="col-lg-6">
 <div class="greyLay">
-  <p class="oversize">  <fontastic>I'm Jason Chiu.</fontastic> <br>
+<p class="oversize">  <fontastic>I'm Jason Chiu.</fontastic> <br>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I attend the <i>University of California, Irvine.</i> <br><br>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I major in Computer Game Science, specializing in software development.<br><br>
-   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I'm an inquisitive scholar by nature and a humble listener by practice.<br>
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I'm an inquisitive scholar by nature and a humble listener by practice.<br>
   </p>
-
   </div>
   </div>
-
 <div class="col-lg-6">
 <div class="greyLay">
   <p class="oversize"> 
-
- 
-
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I'm currently employed as a Campus Ambassador for Readyforce at UCI, and as a research assistant at the California Plug Load Research Center. <br><br>
-
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I enjoy League of Legends, Hearthstone, piano improv, and iced coffee.<br>
-
-
   </p>
-
   </div>
   </div>
-
 </div>
-
 
 <div id="experience">
 <div class="bogus"></div>
 <h2>Experience/Skills </h2>
-
-
 <div class="row constrain80">
 <div class="col-lg-6">
 <div class="greyLay">
   <p class="pod">
 
-  I'm an organizer for HackUCI; the first student-organized hackathon drawing 300+ attendees in Orange County. <a href="www.hackuci.com">Learn more about HackUCI.</a>
+  I'm an organizer for HackUCI; the first student-organized hackathon drawing 300+ attendees in Orange County. <br><centrolink><a href="www.hackuci.com">Learn more about HackUCI.</a></centrolink>
 
 
    </p>
@@ -103,7 +90,7 @@
 <div class="greyLay">
   <p class="pod">
 
-    I'm the Vice President of the Video Game Design Club @UCI, where I mentor promising students who wish to learn how to make games. <a href="http://vgdc-uci.com/">Check out VGDC@UCI here.</a> 
+    I'm the Vice President of the Video Game Design Club @UCI, where I mentor promising students who wish to learn how to make games. <br><centrolink><a href="http://vgdc-uci.com/">Check out VGDC@UCI here.</a></centrolink> 
 
 
     
@@ -122,7 +109,7 @@
 <div class="col-lg-6">
 <div class="greyLay">
   <p class="pod">
-  I'm the Webmaster of the Taiwanese American Organization, which promotes Taiwanese American Culture through social events. <a href="taouci.com">Check out the website I built here.</a>
+  I'm the Webmaster of the Taiwanese American Organization, which promotes Taiwanese American Culture through social events. <br><centrolink><a href="taouci.com">Check out the website I built here.</a></centrolink>
    </p>
 
   </div>
@@ -132,7 +119,7 @@
 <div class="greyLay">
   <p class="pod">
  
-I'm a research assistant at Calplug, where I make and integrate 3D animations for an application for children at the Children's Hospital Orange County. <a href="#">Check out some of my work here.</a>
+I'm a research assistant at Calplug, where I make and integrate 3D animations for an application for children at the Children's Hospital Orange County. <br><centrolink><a href="#">Check out some of my work here.</a></centrolink>
 
   </p>
 
@@ -146,12 +133,6 @@ I'm a research assistant at Calplug, where I make and integrate 3D animations fo
 <div class="greyLay">
   <p class="pod">
   
-
-which is an organization that helps aspiring game developers network with potential employers and opportunities, and make games.
-
-I make animations and develop an interactive application for the Children's Hospital, Orange County (CHOC). This application is developed using Unity2D, and I use the iClone3D and 3dXchange pipline to create animations, while integrating content with the rest of the application. A prototype of the project can be found here. [LINK WILL BE ADDED SHORTLY]
-
-I represent Readyforce at job / career fairs. Readyforce is very similar to LinkedIn, and better tailored to students in Engineering and Computer Science; I focus on increasing the number of students using this service! 
 
 
 Find me on... <br><br>
