Edited headers and finalizing this part

--- a/index.html
+++ b/index.html
@@ -63,8 +63,11 @@
 <div class="col-lg-6">
 <div class="greyLay">
   <p class="oversize"> 
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I'm currently employed as a Campus Ambassador for Readyforce at UCI, and as a research assistant at the California Plug Load Research Center. <br><br>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I enjoy League of Legends, Hearthstone, piano improv, and iced coffee.<br>
+
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I'm currently employed as a Campus Ambassador for Readyforce at UCI. <br><br>
+
+  I'm also employed as a research assistant at the California Plug Load Research Center. <br><br>
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;In my spare time, I enjoy League of Legends, Hearthstone, piano improv, and iced coffee.<br>
   </p>
   </div>
   </div>
