Updated the section to have indentations
And bg should be less obvious

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <div class="col-lg-6">
 <div class="greyLay">
 <p class="oversize">  <fontastic>I'm Jason Chiu.</fontastic> <br>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I attend the <i>University of California, Irvine.</i> <br><br>
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I attend the University of California, Irvine.<br><br>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I major in Computer Game Science, specializing in software development.<br><br>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I'm an inquisitive scholar by nature and a humble listener by practice.<br>
   </p>
@@ -81,7 +81,7 @@
 <div class="greyLay">
   <p class="pod">
 
-  I'm an organizer for HackUCI; the first student-organized hackathon drawing 300+ attendees in Orange County. <br><centrolink><a href="www.hackuci.com">Learn more about HackUCI.</a></centrolink>
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I'm an organizer for HackUCI; the first student-organized hackathon drawing 300+ attendees in Orange County. <br><centrolink><a href="www.hackuci.com">Learn more about HackUCI.</a></centrolink>
 
 
    </p>
@@ -93,7 +93,7 @@
 <div class="greyLay">
   <p class="pod">
 
-    I'm the Vice President of the Video Game Design Club @UCI, where I mentor promising students who wish to learn how to make games. <br><centrolink><a href="http://vgdc-uci.com/">Check out VGDC@UCI here.</a></centrolink> 
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I'm the Vice President of the Video Game Design Club @UCI, where I mentor promising students who wish to learn how to make games. <br><centrolink><a href="http://vgdc-uci.com/">Check out VGDC@UCI here.</a></centrolink> 
 
 
     
@@ -112,7 +112,7 @@
 <div class="col-lg-6">
 <div class="greyLay">
   <p class="pod">
-  I'm the Webmaster of the Taiwanese American Organization, which promotes Taiwanese American Culture through social events. <br><centrolink><a href="taouci.com">Check out the website I built here.</a></centrolink>
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I'm the Webmaster of the Taiwanese American Organization, which promotes Taiwanese American Culture through social events. <br><centrolink><a href="taouci.com">Check out the website I built here.</a></centrolink>
    </p>
 
   </div>
@@ -122,7 +122,7 @@
 <div class="greyLay">
   <p class="pod">
  
-I'm a research assistant at Calplug, where I make and integrate 3D animations for an application for children at the Children's Hospital Orange County. <br><centrolink><a href="#">Check out some of my work here.</a></centrolink>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I'm a research assistant at Calplug, where I make and integrate 3D animations for an application for children at the Children's Hospital Orange County. <br><centrolink><a href="#">Check out some of my work here.</a></centrolink>
 
   </p>
 
