--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <br>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I'm currently employed as a Campus Ambassador for Readyforce at UCI. <br><br>
 
-  I'm also employed as a research assistant at the California Plug Load Research Center. <br><br>
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I'm also employed as a research assistant at the California Plug Load Research Center. <br><br>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;In my spare time, I enjoy League of Legends, Hearthstone, piano improv, and iced coffee.<br>
   </p>
   </div>
