--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
 
 <div id="experience">
 <div class="bogus"></div>
+
 <h2>Experience/Skills </h2>
 <div class="row constrain80">
 <div class="col-lg-6">
@@ -92,14 +93,7 @@
 <div class="col-lg-6">
 <div class="greyLay">
   <p class="pod">
-
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I'm the Vice President of the Video Game Design Club @UCI, where I mentor promising students who wish to learn how to make games. <br><centrolink><a href="http://vgdc-uci.com/">Check out VGDC@UCI here.</a></centrolink> 
-
-
-    
- 
-
-
   </p>
 
   </div>
@@ -132,52 +126,34 @@
 
 
 <div class="row constrain80">
-<div class="col-lg-6">
+
+<div class="col-lg-12">
 <div class="greyLay">
   <p class="pod">
   
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I'm proficient in both C++ and Java. I'm familiar with the agile/scrum methodology, and well learned in process of developing small games from ideas, to iterations, to ship. I'm a strong writer and speaker, and an intensely motivated learner. <br>
 
-
-Find me on... <br><br>
-
-  <a href ="http://www.readyforce.com/Jchiu5">Readyforce</a> <br>
-  <a href ="http://www.linkedin.com/in/foreza/">Linkedin</a> <br>
-  <a href ="http://www.github.com/foreza">Github</a> 
-
-
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I've began to teach myself front-end web development through tools such as Dash and Codecademy, and I'm also learning 3D animation for my job, which requires me to learn iClone/3dxChange Pipeline to animate an avatar. 
    </p>
 
   </div>
   </div>
-
-<div class="col-lg-6">
-<div class="greyLay">
-  <p class="pod">
- 
-stuff about being a webmaster...
-
-
-  </p>
-
   </div>
 </div>
-</div>
-
-
-
-
-
-
-</div>
-
 
 
 <div id="resume">
 <div class="bogus"></div>
 <h2>Resume</h2>
 
-<p> Here is my resume: <a href="#">PDF</a></p>
+<p> Here's my resume: <a href="#">PDF</a> || <a href="#">Word</a> <a href="#">Google Docs</a></p> 
 
+
+You can find me also on... <br><br>
+
+  <a href ="http://www.readyforce.com/Jchiu5">Readyforce</a>, 
+  <a href ="http://www.linkedin.com/in/foreza/">Linkedin</a>,
+  <a href ="http://www.github.com/foreza">Github</a>.
 
 
 
