Decreased all pod/oversize sizes.

--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
 </div>
 </div>
 
+<br>
 
 <div class="row constrain80">
 
@@ -131,7 +132,7 @@
 <div class="greyLay">
   <p class="pod">
   
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I'm proficient in both C++ and Java. I'm familiar with the agile/scrum methodology, and well learned in process of developing small games from ideas, to iterations, to ship. I'm a strong writer and speaker, and an intensely motivated learner. <br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I'm proficient in both C++ and Java. I'm familiar with the agile/scrum methodology, and well learned in process of developing small games from ideas, to iterations, to ship. I'm a strong writer and speaker, and an intensely motivated learner. <br><br>
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I've began to teach myself front-end web development through tools such as Dash and Codecademy, and I'm also learning 3D animation for my job, which requires me to learn iClone/3dxChange Pipeline to animate an avatar. 
    </p>
@@ -146,8 +147,10 @@
 <div class="bogus"></div>
 <h2>Resume</h2>
 
-<p> Here's my resume: <a href="#">PDF</a> || <a href="#">Word</a> <a href="#">Google Docs</a></p> 
-
+<div class="col-lg-12">
+<div class="greyLay">
+  <p class="oversize">
+Here's my resume: <a href="#">PDF</a> || <a href="#">Word</a> || <a href="#">Google Docs</a>
 
 You can find me also on... <br><br>
 
@@ -155,8 +158,12 @@ You can find me also on... <br><br>
   <a href ="http://www.linkedin.com/in/foreza/">Linkedin</a>,
   <a href ="http://www.github.com/foreza">Github</a>.
 
+  </p>
 
 
+
+</div>
+</div>
 </div>
 
 
