--- a/index.html
+++ b/index.html
@@ -147,6 +147,8 @@
 <div class="bogus"></div>
 <h2>Resume</h2>
 
+
+<div class="row constrain80">
 <div class="col-lg-12">
 <div class="greyLay">
   <p class="oversize">
@@ -165,7 +167,7 @@ You can find me also on... <br><br>
 </div>
 </div>
 </div>
-
+</div>
 
 
 
