Highlighting divs and ids.

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <div class="greyLay">
   <p class="pod">
 
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I'm an organizer for HackUCI; the first student-organized hackathon drawing 300+ attendees in Orange County. <br><centrolink><a href="www.hackuci.com">Learn more about HackUCI.</a></centrolink>
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I'm an organizer for HackUCI; the first student-organized hackathon drawing 300+ attendees in Orange County. <br><br><centrolink><a href="www.hackuci.com">Learn more about HackUCI.</a></centrolink>
 
 
    </p>
@@ -151,8 +151,8 @@
 <div class="row constrain80">
 <div class="col-lg-12">
 <div class="greyLay">
-  <p class="oversize">
-Here's my resume: <a href="#">PDF</a> || <a href="#">Word</a> || <a href="#">Google Docs</a>
+  <p>
+Resume: <a href="#">PDF</a> || <a href="#">Word</a> || <a href="#">Google Docs</a> <br>
 
 You can find me also on... <br><br>
 
