trying a roundabout way to do it

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 </nav>
 </div>
 
+<div id="bgplace">
 <div id="about">
 
 <div class="bogus"></div>
@@ -172,7 +173,7 @@ You can find me also on... <br><br>
 
 
 
-
+</div>
 
   <footer>
     <br>
