--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 <div class="row constrain80">
 <div class="col-lg-12">
 <div class="greyLay">
-  <p>
+  <p class="end">
 Resume: <a href="#">PDF</a> || <a href="#">Word</a> || <a href="#">Google Docs</a> <br>
 
 You can find me also on... <br><br>
