--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
   <p class="end">
 Resume: <a href="#">PDF</a> || <a href="#">Word</a> || <a href="#">Google Docs</a> <br>
 
-You can find me also on... <br><br>
+You can find me also on... <br>
 
   <a href ="http://www.readyforce.com/Jchiu5">Readyforce</a>, 
   <a href ="http://www.linkedin.com/in/foreza/">Linkedin</a>,
