Basic changes; will be updating resume onto site soon

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <li><a href="#experience">Experience</a></li>
                 <li><a href="#resume">Resume</a></li>
                 <li><a href="projects.html">Projects</a></li>
-                <li><a href="blog.html">Blog</a></li>
+                <li><a href="https://medium.com/@jasonchiu">Blog</a></li>
             </ul>
             <h1>Jason Chiu</h1>
 </div>
@@ -105,7 +105,7 @@
 <div class="col-lg-6">
 <div class="greyLay">
   <p class="pod">
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I'm the Webmaster of the Taiwanese American Organization, which promotes Taiwanese American Culture through social events. <br><centrolink><a href="taouci.com">Check out the website I built here.</a></centrolink>
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I'm the Webmaster of the Taiwanese American Organization, which promotes Taiwanese American Culture through social events. <br><centrolink><a href="taouci">Check out the website I built here.</a></centrolink>
    </p>
 
   </div>
@@ -151,9 +151,13 @@
 <div class="col-lg-12">
 <div class="greyLay">
   <p class="end">
-Resume: <a href="#">PDF</a> || <a href="#">Word</a> || <a href="#">Google Docs</a> <br>
+<a href="#">My Resume:</a> || <a href="#">Google Docs</a> <br>
 
-You can find me also on...
+
+<embed src=”PDFfiles/interfaces.pdf” width=”600″ height=”500″ alt=”pdf” pluginspage=”http://www.adobe.com/products/acrobat/readstep2.html”>
+
+
+Find me on:
 
   <a href ="http://www.readyforce.com/Jchiu5">Readyforce</a>, 
   <a href ="http://www.linkedin.com/in/foreza/">Linkedin</a>,
