Copied some css styles from tao (resume)

--- a/index.html
+++ b/index.html
@@ -151,10 +151,16 @@
 <div class="col-lg-12">
 <div class="greyLay">
   <p class="end">
-<a href="#">My Resume:</a> || <a href="#">Google Docs</a> <br>
+<a href="#test.pdf">My Resume:</a> || <a href="#">Google Docs</a> <br>
 
 
-<embed src=”PDFfiles/interfaces.pdf” width=”600″ height=”500″ alt=”pdf” pluginspage=”http://www.adobe.com/products/acrobat/readstep2.html”>
+
+
+
+
+
+
+
 
 
 Find me on:
@@ -167,8 +173,25 @@ Find me on:
 
 
 
+
+
 </div>
 </div>
+
+
+<div id="resume-Banner">
+
+<div class="col-xs-12">
+ <a href="#test.pdf"><button type="button" id="resumeButton" class="btn btn-default">Download PDF:</button></a>
+ </div>
+
+
+<img id="resumeBannerImage" src="images/tao.jpg">
+
+
+
+</div>
+
 </div>
 
 
