--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ Find me on:
 <div id="resume-Banner">
 
 <div class="col-xs-12">
- <a href="#test.pdf"><button type="button" id="resumeButton" class="btn btn-default">Download PDF:</button></a>
+ <a href="test.pdf"><button type="button" id="resumeButton" class="btn btn-default">Download PDF:</button></a>
  </div>
 
 
