Added buttons for links on my page

--- a/index.html
+++ b/index.html
@@ -146,39 +146,6 @@
 <div class="bogus"></div>
 <h2>Resume</h2>
 
-
-<div class="row constrain80">
-<div class="col-lg-12">
-<div class="greyLay">
-  <p class="end">
-<a href="#test.pdf">My Resume:</a> || <a href="#">Google Docs</a> <br>
-
-
-
-
-
-
-
-
-
-
-
-Find me on:
-
-  <a href ="http://www.readyforce.com/Jchiu5">Readyforce</a>, 
-  <a href ="http://www.linkedin.com/in/foreza/">Linkedin</a>,
-  <a href ="http://www.github.com/foreza">Github</a>.
-
-  </p>
-
-
-
-
-
-</div>
-</div>
-
-
 <div id="resume-Banner">
 
 <div class="col-xs-12">
@@ -186,18 +153,24 @@ Find me on:
  </div>
 
 
-<img id="resumeBannerImage" src="images/tao.jpg">
+<img id="resumeBannerImage" src="images/jaypcrop.jpg">
 
 
+ <div class="col-xs-4">
+ <a href="http://www.linkedin.com/in/foreza/"><button type="button" id="resumeButton" class="btn btn-default">LinkedIn</button></a>
+ </div>
+
+<div class="col-xs-4">
+ <a href="http://www.github.com/foreza"><button type="button" id="resumeButton" class="btn btn-default">Github</button></a>
+ </div>
+
+<div class="col-xs-4">
+ <a href="http://www.readyforce.com/Jchiu5"><button type="button" id="resumeButton" class="btn btn-default">Readyforce</button></a>
+ </div>
 
 </div>
-
 </div>
 
-
-
-
-</div>
 
   <footer>
     <br>
