Removed section widths.
Seeing all hell break loose, let's go!

--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
 <div id="about">
 
 <div class="bogus"></div>
-      <h2>A little about me... </h2>
 
 <div class="row constrain80">
 <div class="col-lg-6">
@@ -145,29 +144,26 @@
 <div id="resume">
 <div class="bogus"></div>
 <h2>Resume</h2>
+<div class="container">
+	<div id="resume-Banner">
 
-<div id="resume-Banner">
-
-<div class="col-xs-12">
- <a href="test.pdf"><button type="button" id="resumeButton" class="btn btn-default">Download PDF:</button></a>
- </div>
-
-
+	<div class="col-xs-12">
+ 		<a href="test.pdf"><button type="button" id="resumeButton" class="btn btn-default">Download PDF:</button></a>
+ 	</div>
 <img id="resumeBannerImage" src="images/jaypcrop.jpg">
+	<div class="col-xs-4">
+ 		<a href="http://www.linkedin.com/in/foreza/"><button type="button" id="resumeButton" class="btn btn-default">LinkedIn</button></a>
+ 	</div>
 
+	<div class="col-xs-4">
+ 		<a href="http://www.github.com/foreza"><button type="button" id="resumeButton" class="btn btn-default">Github</button></a>
+ 	</div>
 
- <div class="col-xs-4">
- <a href="http://www.linkedin.com/in/foreza/"><button type="button" id="resumeButton" class="btn btn-default">LinkedIn</button></a>
- </div>
+	<div class="col-xs-4">
+ 		<a href="http://www.readyforce.com/Jchiu5"><button type="button" id="resumeButton" class="btn btn-default">Readyforce</button></a>
+ 	</div>
 
-<div class="col-xs-4">
- <a href="http://www.github.com/foreza"><button type="button" id="resumeButton" class="btn btn-default">Github</button></a>
- </div>
-
-<div class="col-xs-4">
- <a href="http://www.readyforce.com/Jchiu5"><button type="button" id="resumeButton" class="btn btn-default">Readyforce</button></a>
- </div>
-
+</div>
 </div>
 </div>
 
