Lifting buttons up!

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <div class="row constrain80">
 <div class="col-lg-6">
 <div class="greyLay">
-<p class="oversize">  <fontastic>I'm Jason Chiu.</fontastic> <br>
+<p class="oversize">  <fontastic>I'm Jason.</fontastic> <br>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I attend the University of California, Irvine.<br><br>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I major in Computer Game Science, specializing in software development.<br><br>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I'm an inquisitive scholar by nature and a humble listener by practice.<br>
@@ -150,8 +150,9 @@
 	<div class="col-xs-12">
  		<a href="test.pdf"><button type="button" id="resumeButton" class="btn btn-default">Download PDF:</button></a>
  	</div>
-<img id="resumeBannerImage" src="images/jaypcrop.jpg">
-	<div class="col-xs-4">
+
+
+ 	<div class="col-xs-4">
  		<a href="http://www.linkedin.com/in/foreza/"><button type="button" id="resumeButton" class="btn btn-default">LinkedIn</button></a>
  	</div>
 
@@ -162,6 +163,9 @@
 	<div class="col-xs-4">
  		<a href="http://www.readyforce.com/Jchiu5"><button type="button" id="resumeButton" class="btn btn-default">Readyforce</button></a>
  	</div>
+ 	
+<img id="resumeBannerImage" src="images/jaypcrop.jpg">
+	
 
 </div>
 </div>
