Swapped positions of resume and more info!

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                   
             <ul class="nav nav-pills navbar-right">
                 <li><a class="active" href="#about">About</a></li>
-                <li><a href="#experience">Experience</a></li>
                 <li><a href="#resume">Resume</a></li>
+                <li><a href="#experience">Experience</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="https://medium.com/@jasonchiu">Blog</a></li>
             </ul>
@@ -69,6 +69,36 @@
   </p>
   </div>
   </div>
+</div>
+
+<div id="resume">
+<div class="bogus"></div>
+<h2>Resume</h2>
+<div class="container">
+	<div id="resume-Banner">
+
+	<div class="col-xs-12">
+ 		<a href="test.pdf"><button type="button" id="resumeButton" class="btn btn-default">Download PDF:</button></a>
+ 	</div>
+
+
+ 	<div class="col-xs-4">
+ 		<a href="http://www.linkedin.com/in/foreza/"><button type="button" id="resumeButton2" class="btn btn-default">LinkedIn</button></a>
+ 	</div>
+
+	<div class="col-xs-4">
+ 		<a href="http://www.github.com/foreza"><button type="button" id="resumeButton2" class="btn btn-default">Github</button></a>
+ 	</div>
+
+	<div class="col-xs-4">
+ 		<a href="http://www.readyforce.com/Jchiu5"><button type="button" id="resumeButton2" class="btn btn-default">Readyforce</button></a>
+ 	</div>
+
+<img id="resumeBannerImage" src="images/jaypcrop.jpg">
+	
+
+</div>
+</div>
 </div>
 
 <div id="experience">
@@ -141,35 +171,9 @@
 </div>
 
 
-<div id="resume">
-<div class="bogus"></div>
-<h2>Resume</h2>
-<div class="container">
-	<div id="resume-Banner">
-
-	<div class="col-xs-12">
- 		<a href="test.pdf"><button type="button" id="resumeButton" class="btn btn-default">Download PDF:</button></a>
- 	</div>
 
 
- 	<div class="col-xs-4">
- 		<a href="http://www.linkedin.com/in/foreza/"><button type="button" id="resumeButton" class="btn btn-default">LinkedIn</button></a>
- 	</div>
 
-	<div class="col-xs-4">
- 		<a href="http://www.github.com/foreza"><button type="button" id="resumeButton" class="btn btn-default">Github</button></a>
- 	</div>
-
-	<div class="col-xs-4">
- 		<a href="http://www.readyforce.com/Jchiu5"><button type="button" id="resumeButton" class="btn btn-default">Readyforce</button></a>
- 	</div>
- 	
-<img id="resumeBannerImage" src="images/jaypcrop.jpg">
-	
-
-</div>
-</div>
-</div>
 
 
   <footer>
