Didn't like it; doing a simple small img in the box

--- a/index.html
+++ b/index.html
@@ -48,43 +48,14 @@
 
 <div class="bogus"></div>
 
-<div class="col-lg-6">
-
-<div class="imaged">
-
-      <img src="images/jasonsugoi.jpg" alt="" />
-      
-      <h5><span>Hey!<span class='spacer'></span><br /><span class='spacer'></span>I'm Jason.</span></h5>
-
-</div>
-
-
-</div>
-
-<div class="col-lg-6">
-
-<p> 
-<br>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I'm currently employed as a Campus Ambassador for Readyforce at UCI. <br><br>
-
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I'm also employed as a research assistant at the California Plug Load Research Center. <br><br>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;In my spare time, I enjoy League of Legends, Hearthstone, piano improv, and iced coffee.<br>
-  </p>
-
-
-
-</div>
-
-
-
-
-
-
 
 <div class="row constrain80">
 <div class="col-lg-6">
 <div class="greyLay">
 <p class="oversize">  <fontastic>I'm Jason.</fontastic> <br>
+
+<div id="welcome-Banner"><img id="welcomeBannerImage" src="images/jasonsugoi.jpg"></div>
+
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I attend the University of California, Irvine.<br><br>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I major in Computer Game Science, specializing in software development.<br><br>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I'm an inquisitive scholar by nature and a humble listener by practice.<br>
@@ -117,13 +88,14 @@
 
 
 <div class="greyLay">
-
+<div class="container">
 <div class="col-xs-6">
  		<a href="http://www.linkedin.com/in/foreza/"><button type="button" id="resumeButton2" class="btn btn-default">LinkedIn</button></a>
  	</div>
 
 	<div class="col-xs-6">
  		<a href="http://www.github.com/foreza"><button type="button" id="resumeButton2" class="btn btn-default">Github</button></a>
+ 	</div>
  	</div>
  	</div>
 <!--
