Marked site as under construction

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <link rel="stylesheet" type="text/css" media="screen" href="jay.css"/>
       <!-- Website title -->
 <!-- -->
-  <title>Jason Chiu</title>
+  <title>Jason Chiu - UNDER CONSTRUCTION</title>
 <!-- -->
 </head>
 
@@ -52,9 +52,13 @@
 <div class="row constrain80">
 <div class="col-lg-6">
 <div class="greyLay">
-<p class="oversize">  <fontastic>I'm Jason.</fontastic> <br>
+<p class="oversize">  
 
 <div id="welcome-Banner"><img id="welcomeBannerImage" src="images/jasonsugoi.jpg"></div>
+
+<fontastic>I'm Jason.</fontastic> <br>
+
+
 
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I attend the University of California, Irvine.<br><br>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I major in Computer Game Science, specializing in software development.<br><br>
