--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <body>
   
-  <nav class="navbar navbar-default" role="navigation">
+  <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" href="#">
