--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   
   <link rel="shortcut icon" href="images/tao_logo-favicon.ico"> <!-- used http://www.favicongenerator.com/ --> 
       <!-- Stylesheet for website -->
-  <link rel="stylesheet" type="text/css" media="screen" href=""/>
+  <link rel="stylesheet" type="text/css" media="screen" href="jason.css"/>
       <!-- Website title -->
 <!-- -->
   <title>Jason Chiu</title>
@@ -35,32 +35,14 @@
       <a class="navbar-brand" href="#">
         <img id="headerImg" alt="Brand" src="images/omu.jpg">
       </a>
-    </div>
-  </div>
-</nav>
-
-
-
-<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="#">
-          <img id="headerImg" alt="Brand" src="images/omu.jpg">
-        </a>
-      </div>
-    </div>
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
+       <ul class="nav navbar-nav">
         <li><a href="#">About<span class="sr-only">(current)</span></a></li>
         <li><a href="#">Resume</a></li>
         <li><a href="#">Blog</a></li>
         <li><a href="#">Projects</a></li>
       </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
+    </div>
+  </div>
 </nav>
 
 
