--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
   
-  <link rel="shortcut icon" href="images/tao_logo-favicon.ico"> <!-- used http://www.favicongenerator.com/ --> 
+  <link rel="shortcut icon" href="images/omu.ico"> <!-- used http://www.favicongenerator.com/ --> 
       <!-- Stylesheet for website -->
   <link rel="stylesheet" type="text/css" media="screen" href="jason.css"/>
       <!-- Website title -->
@@ -32,11 +32,11 @@
   <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">
+       <ul class="nav navbar-nav">
+       <a class="navbar-brand" href="#">
         <img id="headerImg" alt="Brand" src="images/omu.jpg">
       </a>
-       <ul class="nav navbar-nav">
-        <li><a href="#">About<span class="sr-only">(current)</span></a></li>
+        <li><a href="#">About</a></li>
         <li><a href="#">Resume</a></li>
         <li><a href="#">Blog</a></li>
         <li><a href="#">Projects</a></li>
@@ -44,6 +44,26 @@
     </div>
   </div>
 </nav>
+
+<div class="jumbotron">
+  <h1>I'm Jason!</h1>
+  <p>This is my new site.</p>
+  <p><a class="btn btn-primary btn-lg" href="#" role="button">Yes!</a></p>
+</div>
+
+
+<div class="media">
+  <a class="media-left" href="#">
+    <img src="images/jaycrop" alt="...">
+  </a>
+  <div class="media-body">
+    <h4 class="media-heading">This is what I do!</h4>
+    <p> Testing! </p>
+  </div>
+</div>
+
+
+<div class="well well-sm"> Small well - Resume? </div>
 
 
 <p> Sample text </p>
